--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "socket.io-client": "^4.7.2"
   },
   "scripts": {
